# DOLY-DIY

./: LICENSE.txt  README.md  styles.css
.github/workflows/: deploy-python-docs.yml
Add-ons/: README.md
CodeExamples/LcdExample/: README.md  main.cpp
CodeExamples/ServoExample/: README.md  main.cpp
Electronics/BOM/: BOM_Arm.csv  BOM_Bumper.csv  BOM_Charger.csv  BOM_Head.csv  BOM_IO.csv  BOM_MainBoard.csv
Electronics/InteractiveView/: Doly_Arm.html  PCB_Bumper.html  PCB_Charger.html  PCB_Head.html  PCB_IO.html  PCB_MainBoard.html
Guide/web/: index.html
PCB/: BOM_Bumper.csv  BOM_Charger.csv  BOM_Head.csv  BOM_IO.csv  BOM_Motherboard.csv  PCB_Doly_Arm.json  PCB_Doly_DIY_Arm_rev0.html  PCB_Doly_DIY_Bumper_rev0.html  PCB_Doly_DIY_Encoder_rev0.html  PCB_Doly_DIY_Head_rev0.html  PCB_Doly_DIY_IO_rev0.html  PCB_Doly_DIY_rev0.html  PCB_PCB_Dock_Charger_2212.html  PCB_PCB_Dock_Charger_2212.json  PCB_PCB_Doly_CE_2302.json  PCB_PCB_Doly_CE_Bumper_2210.json  PCB_PCB_Doly_CE_Head_2212.json  PCB_PCB_Doly_CE_IO.json  PCB_PCB_Encoder 0922.json  SCH_DOLY_CE_ARM.json  SCH_Doly_CE_Bumper_v1.2210.json  SCH_Doly_CE_Charger_2212.json  SCH_Doly_CE_Encoder_0922.json  SCH_Doly_CE_Head_v1.2212.json  SCH_Doly_CE_IO.json  SCH_Doly_CE_v1.2302.json
Printables/PLA-PETG/: IO_cover.STEP  IO_cover.STL  aligner.STEP  aligner.STL  arm.STEP  arm.STL  arm_cover.STEP  arm_cover.STL  body.STEP  body.STL  bottom_cover.STEP  bottom_cover.STL  bumper_back.STEP  bumper_back.STL  bumper_front.STEP  bumper_front.STL  head.STEP  servo_cover.STEP  servo_cover.STL  side_cover_left.STEP  side_cover_left.STL  side_cover_right.STEP  side_cover_right.STL  wheel_back.STEP  wheel_back.STL  wheel_front.STEP  wheel_front.STL
Printables/Resin/: hand_left.STEP  hand_left.STL  hand_right.STEP  hand_right.STL  power_btn.STEP  power_btn.STL
Printables/TPU/: track_tpu.STEP  track_tpu.STL
SDK/docs/: README.md
SDK/examples/cpp/ArmControl/: CMakeLists.txt  main.cpp
SDK/examples/cpp/Camera/: CMakeLists.txt  main.cpp
SDK/examples/python/ArmControl/source/: CMakeLists.txt  bindings.cpp  pyproject.toml
SDK/examples/python/BatteryControl/source/: CMakeLists.txt  bindings.cpp  pyproject.toml
SDK/examples/python/Camera/source/: CMakeLists.txt  bindings.cpp  pyproject.toml
SDK/examples/python/DriveControl/source/: CMakeLists.txt  bindings.cpp  pyproject.toml
SDK/examples/python/EdgeControl/source/: CMakeLists.txt  bindings.cpp  pyproject.toml
SDK/examples/python/EyeControl/source/: CMakeLists.txt  bindings.cpp  pyproject.toml
SDK/examples/python/FanControl/source/: CMakeLists.txt  bindings.cpp  pyproject.toml
SDK/examples/python/Helper/source/: CMakeLists.txt  bindings.cpp  pyproject.toml
SDK/examples/python/ImuControl/source/: CMakeLists.txt  bindings.cpp  pyproject.toml
SDK/examples/python/IoControl/source/: CMakeLists.txt  bindings.cpp  pyproject.toml
SDK/examples/python/LcdControl/source/: CMakeLists.txt  bindings.cpp  pyproject.toml
SDK/examples/python/LedControl/source/: CMakeLists.txt  bindings.cpp  pyproject.toml
SDK/examples/python/ServoControl/source/: CMakeLists.txt  bindings.cpp  pyproject.toml
SDK/examples/python/SoundControl/source/: CMakeLists.txt  bindings.cpp  pyproject.toml
SDK/examples/python/TofControl/source/: CMakeLists.txt  bindings.cpp  pyproject.toml
SDK/examples/python/TouchControl/source/: CMakeLists.txt  bindings.cpp  pyproject.toml
SDK/examples/python/VContent/source/: CMakeLists.txt  bindings.cpp  pyproject.toml
SDK/include/: ArmEventListener.h  Color.h  DriveControl.h  DriveEvent.h  EdgeControl.h  EdgeEvent.h  FanControl.h  ImuEventListener.h  IoControl.h  LcdControl.h  LedEvent.h  LedEventListener.h  ServoEvent.h  ServoEventListener.h  SoundEvent.h  TofControl.h  TouchControl.h  TouchEvent.h  TouchEventListener.h  TtsControl.h  VContent.h  lccv.hpp  libcamera_app.hpp  libcamera_app_options.hpp
STL/: FDM_IO_lid.STL  FDM_LCD_aligner.STL  FDM_aligner.STL  FDM_arm.STL  FDM_arm_lid.STL  FDM_arm_limiter.STL  FDM_body_main.STL  FDM_bottom_lid.STL  FDM_bumper_back.STL  FDM_bumper_front.STL  FDM_charger_bottom.STL  FDM_charger_cover.STL  FDM_charger_top.STL  FDM_fan_lid.STL  FDM_hexagon_cap.STL  FDM_screw_cap_arm.STL  FDM_track_TPU.STL  FDM_track_cover.STL  FDM_wheel_back.STL  FDM_wheel_front.STL  SLA_hand_L.STL  SLA_hand_R.stl  SLA_power_btn.STL  SLA_servo_arm.STL  SLA_servo_top.STL
cpp/: _arm_control_2main_8cpp-example.html  _arm_control_8h.html  _arm_control_8h.js  _arm_control_8h_source.html  _arm_event_8h.html  _arm_event_8h.js  _arm_event_listener_8h.html  _arm_event_listener_8h.js  _arm_event_listener_8h_source.html  _camera_2main_8cpp-example.html  _color_8h.html  _color_8h.js  _color_8h_source.html  _drive_control_2main_8cpp-example.html  _drive_control_8h.html  _drive_control_8h_source.html  _drive_event_8h.html  _drive_event_8h.js  _drive_event_listener_8h.js  _drive_event_listener_8h_source.html  _edge_control_2main_8cpp-example.html  _edge_control_8h.html  _edge_control_8h_source.html  _edge_event_8h.html  _edge_event_8h.js  _edge_event_8h_source.html  _edge_event_listener_8h.js  _edge_event_listener_8h_source.html  _eye_control_2main_8cpp-example.html  _eye_control_8h.js  _eye_event_8h.html  _eye_event_listener_8h.html  _fan_control_2main_8cpp-example.html  _fan_control_8h.html  _fan_control_8h.js  _fan_control_8h_source.html  _helper_2main_8cpp-example.html  _helper_8h.html  _helper_8h.js  _helper_8h_source.html  (+199 more)
cpp/search/: all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enums_6.js  enums_8.js  enums_9.js  enumvalues_0.js  enumvalues_10.js  enumvalues_11.js  enumvalues_12.js  enumvalues_13.js  (+72 more)
maker/: index.html
python/: 404.html  index.html  sitemap.xml
python/api/: index.html
python/changelog/: index.html
(+304 files in other folders)
