[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "doly-io"
version = "0.1.0"
description = "Python wrapper for Doly IoControl"
requires-python = ">=3.9"

authors = [
  { name = "Levent Erenler" }
]

license = { text = "Proprietary – Non-Commercial Use Only" }

keywords = ["doly", "robot"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://doly.ai"
Repository = "https://github.com/robotdoly/DOLY-DIY"